test/instance-checks-5.err.expect
test/instance-checks-5.ktn:1:33: error: expected scalar type t2 but got t1
test/instance-checks-5.ktn:1:15: note: t2 is from here
test/instance-checks-5.ktn:1:15: note: t1 is from here
